--- a/createAccount.html
+++ b/createAccount.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <a href="./index.html">VOLTAR</a>
+
     <script src="./js/index.js"></script>
 </body>
 </html>
