--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 ENTRAR
             </p>
             <p class="createAccount">
-                CRIAR CONTA
+                <a href="./createAccount.html">CRIAR CONTA</a>
             </p>
         </section>
     </section>
