--- a/createAccount.html
+++ b/createAccount.html
@@ -9,8 +9,28 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <a href="./index.html">VOLTAR</a>
-
+    <section class="leftImage">
+        
+    </section>
+    <section class="mainPage">
+        <section class="mainPageVoid">
+            
+        </section>
+        <section class="createAccountPage">
+            <p class="createAccountMessage">
+                CRIAR CONTA
+            </p>
+            <p class="userInputsCreateAccount">
+                User name <br> Password <br> Repeat Password
+            </p>
+            <p class="buttonCreateAccount">
+                CRIAR CONTA AGORA
+            </p>
+            <p class="createAccount">
+                <a href="./index.html">VOLTAR</a>
+            </p>
+        </section>
+    </section>
     <script src="./js/index.js"></script>
 </body>
 </html>
