add raw buttons

--- a/createAccount.html
+++ b/createAccount.html
@@ -23,9 +23,9 @@
             <p class="userInputsCreateAccount">
                 User name <br> Password <br> Repeat Password
             </p>
-            <p class="buttonCreateAccount">
+            <button class="buttonCreateAccount">
                 CRIAR CONTA AGORA
-            </p>
+            </button>
             <p class="createAccount">
                 <a href="./index.html">VOLTAR</a>
             </p>
