--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <p class="userInputs">
                 User name // Password
             </p>
-            <p class="buttonEnter">
+            <button class="buttonEnter">
                 ENTRAR
-            </p>
-            <p class="createAccount">
+            </button>
+            <button class="createAccount">
                 <a href="./createAccount.html">CRIAR CONTA</a>
-            </p>
+            </button>
         </section>
     </section>
     <script src="./js/index.js"></script>
