--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -21,7 +21,11 @@
                 CRIAR CONTA
             </p>
             <p class="userInputsCreateAccount">
-                User name <br> Password <br> Repeat Password
+                <input required type="text" name="input_createUser" id="input_createUser" placeholder="User name">
+                <br> 
+                <input required type="text" name="input_createPassword" id="input_createPassword" placeholder="Password">
+                <br> 
+                <input required type="text" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
             </p>
             <button class="buttonCreateAccount">
                 CRIAR CONTA AGORA
