--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,10 @@
                 ENTRAR NO SISTEMA DE RECADOS
             </p>
             <p class="userInputs">
-                User name // Password
+                <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
+                <input required type="text" name="input_password" id="input_password" placeholder="Password">
             </p>
-            <button class="buttonEnter">
+            <button type="submit" class="buttonEnter">
                 ENTRAR
             </button>
             <button class="createAccount">
