--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -20,16 +20,16 @@
             <p class="createAccountMessage">
                 CRIAR CONTA
             </p>
-            <p class="userInputsCreateAccount">
-                <input required type="text" name="input_createUser" id="input_createUser" placeholder="User name">
-                <br> 
-                <input required type="text" name="input_createPassword" id="input_createPassword" placeholder="Password">
-                <br> 
-                <input required type="text" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
-            </p>
-            <button class="buttonCreateAccount">
-                CRIAR CONTA AGORA
-            </button>
+            <form>
+                <p class="userInputsCreateAccount">
+                    <input required type="text" name="input_createUser" id="input_createUser" placeholder="User name">
+                    <br> 
+                    <input required type="text" name="input_createPassword" id="input_createPassword" placeholder="Password">
+                    <br> 
+                    <input required type="text" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
+                </p>
+                <input type="submit" class="buttonCreateAccount" value="CRIAR CONTA AGORA"></input>
+            </form>
             <p class="createAccount">
                 <a href="./index.html">VOLTAR</a>
             </p>
