--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
             <p class="mainMessage">
                 ENTRAR NO SISTEMA DE RECADOS
             </p>
-            <p class="userInputs">
-                <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
-                <input required type="text" name="input_password" id="input_password" placeholder="Password">
-            </p>
-            <button type="submit" class="buttonEnter">
-                ENTRAR
-            </button>
+            <form>
+                <p class="userInputs">
+                    <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
+                    <input required type="text" name="input_password" id="input_password" placeholder="Password">
+                </p>
+                <input type="submit" class="buttonEnter" value="ENTRAR"></input>
+            </form>
             <button class="createAccount">
                 <a href="./createAccount.html">CRIAR CONTA</a>
             </button>
