add create new account

--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -20,13 +20,13 @@
             <p class="createAccountMessage">
                 CRIAR CONTA
             </p>
-            <form>
+            <form id="form_createAccount">
                 <p class="userInputsCreateAccount">
                     <input required type="text" name="input_createUser" id="input_createUser" placeholder="User name">
                     <br> 
-                    <input required type="text" name="input_createPassword" id="input_createPassword" placeholder="Password">
+                    <input required type="password" name="input_createPassword" id="input_createPassword" placeholder="Password">
                     <br> 
-                    <input required type="text" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
+                    <input required type="password" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
                 </p>
                 <input type="submit" class="buttonCreateAccount" value="CRIAR CONTA AGORA"></input>
             </form>
