--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <p class="mainMessage">
                 ENTRAR NO SISTEMA DE RECADOS
             </p>
-            <form>
+            <form id="form_access">
                 <p class="userInputs">
                     <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
                     <input required type="text" name="input_password" id="input_password" placeholder="Password">
