--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <form id="form_access">
                 <p class="userInputs">
                     <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
-                    <input required type="text" name="input_password" id="input_password" placeholder="Password">
+                    <input required type="password" name="input_password" id="input_password" placeholder="Password">
                 </p>
                 <input type="submit" class="buttonEnter" value="ENTRAR"></input>
             </form>
