--- a/src/messages.html
+++ b/src/messages.html
@@ -11,11 +11,29 @@
 <body>
     <h1>Meus recados</h1>
 
-    <button>
+    <button class="logoutBtn">
         <a href="./index.html">Logout</a>
     </button>
 
-    
+    <form id="form_messages">
+        <input required class="inputMessages" type="text" name="input_msgDescr" id="input_msgDescr" placeholder="Descrição">
+        <input required class="inputMessages" type="text" name="input_msgDetails" id="input_msgDetails" placeholder="Detalhamento">
+        <input class="inputMessages" type="submit" value="Salvar">
+    </form>
+    <hr>
+    <table>
+        <thead>
+            <th>#</th>
+            <th>Descrição</th>
+            <th>Detalhamento</th>
+            <th>Ação</th>
+        </thead>
+        <hr>
+        <tbody>
+            
+        </tbody>
+    </table>
+
     <script src="./js/index.js"></script>
 </body>
 </html>
