--- a/src/messages.html
+++ b/src/messages.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lógica de Programação - Atividade Final de Módulo</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
 </head>
 <body>
     <h1>Meus recados</h1>
@@ -20,17 +20,26 @@
         <input required class="inputMessages" type="text" name="input_msgDetails" id="input_msgDetails" placeholder="Detalhamento">
         <input class="inputMessages" type="submit" value="Salvar">
     </form>
-    <hr>
+ 
     <table>
         <thead>
-            <th>#</th>
-            <th>Descrição</th>
-            <th>Detalhamento</th>
-            <th>Ação</th>
+            <tr>
+                <th>#</th>
+                <th>Descrição</th>
+                <th>Detalhamento</th>
+                <th>Ação</th>
+            </tr>
         </thead>
-        <hr>
         <tbody>
-            
+            <tr>
+                <td>id</td>
+                <td>descricoa</td>
+                <td>Detalhamento</td>
+                <td>
+                    <button>Editar</button>
+                    <button>Apagar</button>
+                </td>
+            </tr>
         </tbody>
     </table>
 
