--- a/src/messages.html
+++ b/src/messages.html
@@ -30,17 +30,7 @@
                 <th>Ação</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>id</td>
-                <td>descricoa</td>
-                <td>Detalhamento</td>
-                <td>
-                    <button>Editar</button>
-                    <button>Apagar</button>
-                </td>
-            </tr>
-        </tbody>
+        <tbody id="tbody"></tbody>
     </table>
 
     <script src="./js/index.js"></script>
