wip style messages.html

--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body id="bodyCreateAccount">
     <section class="leftImage">
         
     </section>
