--- a/src/messages.html
+++ b/src/messages.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lógica de Programação - Atividade Final de Módulo</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body id="bodyMessages">
     <h1>Meus recados</h1>
 
     <button class="logoutBtn">
@@ -20,7 +20,7 @@
         <input required class="inputMessages" type="text" name="input_msgDetails" id="input_msgDetails" placeholder="Detalhamento">
         <input class="inputMessages" type="submit" value="Salvar">
     </form>
- 
+
     <table>
         <thead>
             <tr>
