style messages.html

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
                     <input required type="password" name="input_password" id="input_password" placeholder="Password">
                 </p>
                 <input type="submit" class="buttonEnter" value="ENTRAR"></input>
-                <button class="createAccount">
+                <p class="createAccount">
                     <a href="./createAccount.html">CRIAR CONTA</a>
-                </button>
+                </p>
             </form>
         </section>
     </section>
