add form classes

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="row h-100 d-flex justify-content-center align-items-center justify-content-around">
         <div class="mainPageLogin col-6 bg-info h-75 bg-opacity-25 rounded-3">
             <div class="row h-100">
-                <form class="d-flex flex-column justify-content-center align-items-center">
+                <form class="form_access d-flex flex-column justify-content-center align-items-center">
                     <div class="mainMessage">
                         ENTRAR NO SISTEMA DE RECADOS
                     </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="createAccountPage col-4 bg-black h-75 bg-opacity-25 rounded-3">
             <div class="row h-100 text-light">
-                <form class="d-flex flex-column justify-content-center align-items-center">
+                <form class="form_createAccount d-flex flex-column justify-content-center align-items-center">
                     <div class="createAccountMessage">
                         CRIAR CONTA
                     </div>
