fix script reference

--- a/src/messages.html
+++ b/src/messages.html
@@ -33,6 +33,6 @@
         <tbody id="tbody"></tbody>
     </table>
     
-    <script src="./js/messages.ts"></script>
+    <script src="./js/messages.js"></script>
 </body>
 </html>
