--- a/src/index.html
+++ b/src/index.html
@@ -9,36 +9,42 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="container-fluid vh-100 bg-dark">
+<body class="container-fluid vh-100">
     <div class="row h-100 d-flex justify-content-center align-items-center justify-content-around">
         <div class="mainPageLogin col-6 bg-info h-75 bg-opacity-25 rounded-3">
-            <div class="row h-100">
-                <form class="form_access d-flex flex-column justify-content-center align-items-center">
-                    <div class="mainMessage">
+            <div class="row h-100 d-flex flex-column justify-content-center align-items-center">
+                <form id="form_access">
+                    <p class="mainMessage">
                         ENTRAR NO SISTEMA DE RECADOS
-                    </div>
-                    <div class="userInputs">
+                    </p>
+                    <p class="userInputs">
                         <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
                         <input required type="password" name="input_password" id="input_password" placeholder="Password">
-                    </div>
+                    </p>
                     <input type="submit" class="buttonEnter" value="ENTRAR"></input>
+                    <p class="createAccount">
+                        <a href="./createAccount.html">CRIAR CONTA</a>
+                    </p>
                 </form>
             </div>
         </div>
         <div class="createAccountPage col-4 bg-black h-75 bg-opacity-25 rounded-3">
-            <div class="row h-100 text-light">
-                <form class="form_createAccount d-flex flex-column justify-content-center align-items-center">
-                    <div class="createAccountMessage">
+            <div class="row h-100 text-light d-flex flex-column justify-content-center align-items-center">
+                <form id="form_createAccount">
+                    <p class="createAccountMessage">
                         CRIAR CONTA
-                    </div>
-                    <div class="userInputsCreateAccount">
+                    </p>
+                    <p class="userInputsCreateAccount">
                         <input required type="text" name="input_createUser" id="input_createUser" placeholder="User name">
                         <br> 
                         <input required type="password" name="input_createPassword" id="input_createPassword" placeholder="Password">
                         <br> 
                         <input required type="password" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
-                    </div>
+                    </p>
                     <input type="submit" class="buttonCreateAccount" value="CRIAR CONTA AGORA"></input>
+                    <p class="createAccount">
+                        <a href="./index.html">VOLTAR</a>
+                    </p>
                 </form>
             </div>
         </div>
