--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
         <div class="mainPageLogin col-6 bg-info h-75 bg-opacity-25 rounded-3">
             <div class="row h-100 d-flex flex-column justify-content-center align-items-center">
                 <form id="form_access">
-                    <p class="mainMessage">
+                    <div class="mainMessage">
                         ENTRAR NO SISTEMA DE RECADOS
-                    </p>
-                    <p class="userInputs">
+                    </div>
+                    <div class="userInputs">
                         <input required type="text" name="input_userName" id="input_userName" placeholder="User name">
                         <input required type="password" name="input_password" id="input_password" placeholder="Password">
-                    </p>
+                    </div>
                     <input type="submit" class="buttonEnter" value="ENTRAR"></input>
-                    <p class="createAccount">
+                    <div class="createAccount">
                         <a href="./createAccount.html">CRIAR CONTA</a>
-                    </p>
+                    </div>
                 </form>
             </div>
         </div>
         <div class="createAccountPage col-4 bg-black h-75 bg-opacity-25 rounded-3">
             <div class="row h-100 text-light d-flex flex-column justify-content-center align-items-center">
                 <form id="form_createAccount">
-                    <p class="createAccountMessage">
+                    <div class="createAccountMessage">
                         CRIAR CONTA
-                    </p>
-                    <p class="userInputsCreateAccount">
+                    </div>
+                    <div class="userInputsCreateAccount">
                         <input required type="text" name="input_createUser" id="input_createUser" placeholder="User name">
                         <br> 
                         <input required type="password" name="input_createPassword" id="input_createPassword" placeholder="Password">
                         <br> 
                         <input required type="password" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
-                    </p>
+                    </div>
                     <input type="submit" class="buttonCreateAccount" value="CRIAR CONTA AGORA"></input>
-                    <p class="createAccount">
+                    <div class="createAccount">
                         <a href="./index.html">VOLTAR</a>
-                    </p>
+                    </div>
                 </form>
             </div>
         </div>
