--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="container-fluid vh-100">
     <div class="row h-100 d-flex justify-content-center align-items-center justify-content-around">
-        <div class="mainPageLogin col-md-6 col-sm-8 bg-info h-75 bg-opacity-25 rounded-3">
+        <div class="mainPageLogin col-md-6 col-sm-8 bg-info h-75 bg-opacity-25 rounded-3 my-1">
             <div class="row h-100 d-flex flex-column justify-content-center align-items-center">
                 <form id="form_access">
                     <div class="mainMessage">
@@ -21,11 +21,11 @@
                         <input required type="text" class="form-control" name="input_userName" id="input_userName" placeholder="User name">
                         <input required type="password" class="form-control" name="input_password" id="input_password" placeholder="Password">
                     <!-- </div> -->
-                    <input type="submit" class="buttonEnter btn btn-outline-secondary" value="ENTRAR"></input>
+                    <input type="submit" class="buttonEnter btn btn-outline-secondary col-10" value="ENTRAR"></input>
                 </form>
             </div>
         </div>
-        <div class="createAccountPage col-md-4 col-sm-8  bg-black h-75 bg-opacity-25 rounded-3">
+        <div class="createAccountPage col-md-4 col-sm-8  bg-black h-75 bg-opacity-25 rounded-3 my-1">
             <div class="row h-100 text-light d-flex flex-column justify-content-center align-items-center">
                 <form id="form_createAccount">
                     <div class="createAccountMessage">
@@ -36,7 +36,7 @@
                         <input required type="password" class="form-control" name="input_createPassword" id="input_createPassword" placeholder="Password">
                         <input required type="password" class="form-control" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
                     <!-- </div> -->
-                    <input type="submit" class="buttonCreateAccount btn btn-outline-secondary col-10" value="CRIAR CONTA AGORA"></input>
+                    <input type="submit" class="buttonCreateAccount btn btn-outline-secondary col-10" value="CRIAR CONTA"></input>
                 </form>
             </div>
         </div>
