--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <div class="row h-100 d-flex flex-column justify-content-center align-items-center">
                 <form id="form_access">
                     <div class="mainMessage">
-                        ENTRAR NO SISTEMA DE RECADOS
+                        ENTRAR
                     </div>
                     <!-- <div class="userInputs"> -->
                         <input required type="text" class="form-control" name="input_userName" id="input_userName" placeholder="User name">
