--- a/src/messages.html
+++ b/src/messages.html
@@ -6,33 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lógica de Programação - Atividade Final de Módulo</title>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body id="bodyMessages">
-    <h1>Meus recados</h1>
-
-    <button class="logoutBtn">
-        <a href="./index.html">Logout</a>
-    </button>
-
-    <form id="form_messages">
-        <input required class="inputMessages" type="text" name="input_msgDescr" id="input_msgDescr" placeholder="Descrição">
-        <input required class="inputMessages" type="text" name="input_msgDetails" id="input_msgDetails" placeholder="Detalhamento">
-        <input class="inputMessages" type="submit" value="Salvar">
-    </form>
-
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Descrição</th>
-                <th>Detalhamento</th>
-                <th>Ação</th>
-            </tr>
-        </thead>
-        <tbody id="tbody"></tbody>
-    </table>
-    
+<body class="container-fluid vh-100">
+    <div class="row h-100">
+        <div class="col-6">
+            <h1>Meus recados</h1>
+        </div>
+        <div class="col-6">
+            <button class="btn btn-outline-secondary logoutBtn">
+                <a href="./index.html">Logout</a>
+            </button>
+        </div>
+        <div class="row">
+            <div class="col">
+                <form id="form_messages">
+                    <input required class="form-control inputMessages" type="text" name="input_msgDescr" id="input_msgDescr" placeholder="Descrição">
+                    <input required class="form-control inputMessages" type="text" name="input_msgDetails" id="input_msgDetails" placeholder="Detalhamento">
+                    <input class="btn btn-outline-secondary buttonEnter" type="submit" value="Salvar">
+                </form>
+            </div>
+        </div>
+        <div class="col">
+            <table>
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Descrição</th>
+                        <th>Detalhamento</th>
+                        <th>Ação</th>
+                    </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+            </table>
+        </div>
+    </div>
+    <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/messages.js"></script>
 </body>
 </html>
