messages.html working

--- a/src/messages.html
+++ b/src/messages.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="row my-3">                           <!-- inputs -->
-                <form class="d-flex flex-row formMessages justify-content-start">
+                <form class="d-flex flex-row justify-content-start" id="form_messages">
                     <div class="col-4">
                         <input required class="form-control" type="text" name="input_msgDescr" id="input_msgDescr" placeholder="Descrição">
                     </div>
@@ -53,6 +53,6 @@
         </div>                                                      <!-- to here -->
     </div>
     <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/messages.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
