rm unused code and comments

--- a/src/messages.html
+++ b/src/messages.html
@@ -11,8 +11,8 @@
 </head>
 <body class="container-fluid vh-100">
     <div class="row h-100 d-flex">
-        <div class="col">                     <!-- work from here -->
-            <div class="row justify-content-between">   <!-- meus recados logout -->
+        <div class="col">
+            <div class="row justify-content-between">
                 <div class="col-4">
                     <h1>Meus recados</h1>
                 </div>
@@ -22,7 +22,7 @@
                     </button>
                 </div>
             </div>
-            <div class="row my-3">                           <!-- inputs -->
+            <div class="row my-3">
                 <form class="d-flex flex-row justify-content-start" id="form_messages">
                     <div class="col-4">
                         <input required class="form-control" type="text" name="input_msgDescr" id="input_msgDescr" placeholder="Descrição">
@@ -50,7 +50,7 @@
                     </table>
                 </div>
             </div>
-        </div>                                                      <!-- to here -->
+        </div>
     </div>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/index.js"></script>
