wip - messages layout

--- a/src/messages.html
+++ b/src/messages.html
@@ -35,7 +35,7 @@
                     </div>
                 </form>
             </div>
-            <div class="row">
+            <div class="row bg-body bg-opacity-75 rounded-3">
                 <div class="col table-responsive">
                     <table class="table table-striped text-center">
                         <thead>
