add margin to index.html inputs

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
                     <div class="mainMessage">
                         ENTRAR
                     </div>
-                    <input required type="text" class="form-control" name="input_userName" id="input_userName" placeholder="User name">
-                    <input required type="password" class="form-control" name="input_password" id="input_password" placeholder="Password">
-                    <input type="submit" class="buttonEnter btn btn-outline-secondary col-10" value="ENTRAR"></input>
+                    <input required type="text" class="form-control m-1" name="input_userName" id="input_userName" placeholder="User name">
+                    <input required type="password" class="form-control m-1" name="input_password" id="input_password" placeholder="Password">
+                    <input type="submit" class="buttonEnter btn btn-outline-secondary col-10 m-1" value="ENTRAR"></input>
                 </form>
             </div>
         </div>
@@ -29,10 +29,10 @@
                     <div class="createAccountMessage">
                         CRIAR CONTA
                     </div>
-                    <input required type="text" class="form-control" name="input_createUser" id="input_createUser" placeholder="User name">
-                    <input required type="password" class="form-control" name="input_createPassword" id="input_createPassword" placeholder="Password">
-                    <input required type="password" class="form-control" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
-                    <input type="submit" class="buttonCreateAccount btn btn-outline-secondary col-10" value="CRIAR CONTA"></input>
+                    <input required type="text" class="form-control m-1" name="input_createUser" id="input_createUser" placeholder="User name">
+                    <input required type="password" class="form-control m-1" name="input_createPassword" id="input_createPassword" placeholder="Password">
+                    <input required type="password" class="form-control m-1" name="input_repeatPassword" id="input_repeatPassword" placeholder="Repeat password">
+                    <input type="submit" class="buttonCreateAccount btn btn-outline-secondary col-10 m-1" value="CRIAR CONTA"></input>
                 </form>
             </div>
         </div>
