--- a/src/messages.html
+++ b/src/messages.html
@@ -13,8 +13,8 @@
     <div class="row h-100 d-flex">
         <div class="col">
             <div class="row justify-content-between">
-                <div class="col-4">
-                    <h1>Meus recados</h1>
+                <div class="col-4 h1 customColorPurple bg-light bg-opacity-75 rounded-3">
+                    Meus recados
                 </div>
                 <div class="col-2 d-flex align-items-center justify-content-center">
                     <button class="logoutBtn btn btn-outline-secondary">
@@ -37,7 +37,7 @@
             </div>
             <div class="row bg-body bg-opacity-75 rounded-3">
                 <div class="col table-responsive">
-                    <table class="table table-striped text-center">
+                    <table class="table table-hover text-center">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
